# NexAU-harbor

./: .gitignore  complete_task_alignment_analysis.md  pyproject.toml  run_tests.sh  test.yaml
code_agent_gemini_cli/: claude_code_tool.json  code_agent_gemini_cli.yaml  code_evaluator.py  complete_task_example.py  gemini-system-prompt.md  main.py  nexau-gemini-cli-systemprompt.md  tmp.md
code_agent_gemini_cli/tmp/: gemini-system-prompt.md  gemini_cli_tool.json
code_agent_gemini_cli/tool_impl/: __init__.py  glob_tool.py  google_web_search.py  list_directory.py  replace.py  save_memory.py  web_fetch.py  write_todos.py
code_agent_gemini_cli/tools/: Bash.tool.yaml  Edit.tool.yaml  Glob.tool.yaml  Grep.tool.yaml  TodoWrite.tool.yaml  WebSearch.tool.yaml  Write.tool.yaml  activate_skill.tool.yaml  ask_user.tool.yaml  complete_task.tool.yaml  google_web_search.tool.yaml  list_directory.tool.yaml  read_file.tool.yaml  read_many_files.tool.yaml  save_memory.tool.yaml  web_fetch.tool.yaml  write_todos.tool.yaml
nexau_harbor/: __init__.py  cli.py  compact_context_hook.py  complete_task_hook.py  test_compact_context.py  test_complete_task.py
nexau_harbor/tool_impl/: __init__.py  ask_user.py  complete_task.py  glob_tool.py  google_web_search.py  list_directory.py  read_file.py  read_many_files.py  replace.py  run_shell_command.py  save_memory.py  search_file_content.py  web_fetch.py  write_file.py  write_todos.py
nexau_harbor/tool_impl/tests/: __init__.py  test_ask_user.py  test_glob_tool.py  test_google_web_search.py  test_list_directory.py  test_read_file.py  (+7 more)
