[project]
name = "nexau-harbor"
version = "0.1.0"
description = "NexAU Agent CLI"
requires-python = ">=3.10"
dependencies = [
    "nexau @ git+https://github.com/nex-agi/NexAU.git@v0.3.5",
]

[project.scripts]
nexau-harbor = "nexau_harbor.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
